@@ -1,3 +1,11 @@
+2006-02-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/TreeView_Detail.h,
+	  src/TreeView_Detail.cc: added mountpointcolumn (#304688)
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: added submenu 'Devices' which allows one to
+	  select devices from the menu (#329415)
+	
 2006-01-31 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* confgure.in: added 'tr' to ALL_LINUGAS on request of the Turkish
